# wlc-scenario-explorer

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yaml  package.json  paper.bib  paper.md
.devcontainer/: Dockerfile  devcontainer.json
.gitlab/merge_request_templates/: default.md
backend/: .dockerignore  .gitignore  Dockerfile  app.py  gunicorn_config.py  pyproject.toml
backend/bruno/: scenario.bru
backend/scripts/: install.sh  start.sh
backend/src/: constants.py  db.py  models.py  queries.py  utils.py
backend/src/shared_with_frontend/: README.md  constants.py  schemas.py
deploy/: helmfile.yaml
deploy/env/: values.production.yaml  values.yaml.gotmpl
deploy/values/: backend.integration.yaml  backend.production.yaml  backend.review.yaml  frontend.production.yaml
documentation/: Dockerfile  components.json  docusaurus.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
documentation/docs/: Caveats.md  FAQ.md  Getting-started.md
documentation/docs/API/: endpoints.md  scenario.md  suggestions.md
documentation/docs/Architecture/: dashboard.md  folders.md
documentation/docs/Data/: parquet.mdx
documentation/docs/Docusaurus/: intro.md
documentation/docs/Guides/: How-to-add-a-scenario-to-prod.md  How-to-deploy.md  How-to-make-a-release.md  How-to-setup-kubectl.md  How-to-setup-the-VPN.md  How-to-verify-pod-storage.md
documentation/src/css/: custom.css
documentation/src/pages/: index.tsx
e2e/: .eslintrc.cjs  .gitignore  Dockerfile  env.ts  package-lock.json  package.json  playwright.config.ts  pre-playwright.sh  tsconfig.eslint.json  tsconfig.json
e2e/.husky/: pre-push
e2e/scripts/: prevent-.only-page.pause-push.sh
e2e/tests/: constants.ts  env.ts  example.spec.ts  functions.ts
e2e/tests/features/: disclaimer-modal.spec.ts  navigation.spec.ts
frontend/: .env.example  .eslintrc.cjs  .gitignore  Dockerfile  e2e.Dockerfile  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.eslint.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1729504722020-b267e6085a77e.mjs
frontend/scripts/: generateSeeds.ts
frontend/src/: App.css  App.tsx  env.ts  global.css  main.tsx  routeTree.gen.ts
frontend/src/components/: CopyToClipboard.tsx  DataTableGeneric.tsx  DisclaimerModal.tsx  DisclaimerText.tsx  DividedByDisclaimerModal.tsx  ErrorOccurred.tsx  Header.tsx  InfoButton.tsx  LineGraphIcon.tsx  LoadingSpinner.tsx  MultiSelect.tsx  NoDataFound.tsx  NoDataFoundInline.tsx  NotFound.tsx  Section.tsx  SectionForDoc.tsx  StackedAreaGraphIcon.tsx  StackedBarGraphIcon.tsx  TableIcon.tsx  TableOfContents.tsx  TypographyContent.tsx  TypographyFigure.tsx  TypographyH1.tsx  TypographyH2.tsx  TypographyH3.tsx  TypographyH4.tsx  TypographyList.tsx  TypographyMuted.tsx  TypographyP.tsx  WarningTextLayout.tsx  settings-button.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/lib/: constants.ts  constants2.ts  queries.ts  schemas.ts  types.ts  utils.ts
frontend/src/routes/: __root.tsx  about.tsx  health.tsx  (+2 more)
frontend/tests/: constants.ts  example.spec.ts  parquet.test.ts
(+89 files in other folders)
