[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Benjamin Lesne <benjamin.lesne@outlook.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
docker_build_dev = { cmd = "docker build --target dev -t EUBS/backend:0.1.0 ." }
docker_build_prod = { cmd = "docker build --target prod -t EUBS/backend:0.1.0 ." }
docker_dev = { cmd = "docker run -p 8080:8080" }
docker_prod = { cmd = "docker run -p 8081:8081" }