[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Benjamin Lesne <benjamin.lesne@outlook.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
mypy = "^1.10.0"
ruff = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
docker_build_prod = { cmd = "docker build --target prod -t scenario-explorer/back:0.1.0 ." }
docker_prod = { cmd = "docker run -p 8081:8081 --rm scenario-explorer/back:0.1.0" }
dev = { cmd = "flask --app app run --host 0.0.0.0 --port=8080 --debug" }
preview = { cmd = "poetry run gunicorn --config ./gunicorn_config.py app:app" }
lint = { cmd = "ruff check" }
typecheck = { cmd = "mypy --strict ./" }